# mercury-na-plugin-template

./: CMakeLists.txt  na_abc.c  rename-plugin.sh
test/: CMakeLists.txt
